--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,11 +4,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts"
-  ],
+, "./src/app/app.config.server.ts"  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
